# log_analyzer

./: Makefile  README.md  log_analyzer.ini  pyproject.toml
src/log_analyzer/: log_analyzer.py
template/: report.html
tests/: test_log_analyzer.py
tests/data/log/: nginx-access-ui.log-20150630
tests/data/report/: report-2015.06.30-example.html
